resources/policy/bundles/pss-baseline-v2022/hostpath-volumes.yaml
# Copyright 2024 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPHostFilesystem
metadata:
  name: pss-baseline-v2022-hostpath-volumes
  labels:
    policy.plural.sh/bundleName: pss-baseline-v2022
  annotations:
    policycontroller.gke.io/bundleVersion: "202403.0"
    policy.plural.sh/constraintData: |-
      "{
        bundleName: 'pss-baseline-v2022',
        bundleDisplayName: 'Pod Security Standards Baseline v2022',
        bundleLink: 'https://cloud.google.com/anthos-config-management/docs/how-to/using-pss-baseline',
        bundleVersion: '202403.0',
        bundleDescription: 'Use the Pod Security Standards Baseline v2022 policy bundle with Policy Controller to achieve many of the Kubernetes Pod Security Standards Baseline policy protections.',
        controlNumbers: '[]',
        severity: 'UNSPECIFIED',
        description: '`HostPath` volumes must be forbidden. https://kubernetes.io/docs/concepts/security/pod-security-standards/#baseline',
        remediation: 'Cannot use `HostPath` volumes. Remove all `HostPath` volumes from your containers.',
        minimumTemplateLibraryVersion: '1.10.1',
        constraintHash: 'ac2b1d2421c0821ced9ee2436cc71e8325156195c93b5f23edde87a79847e9ca'
      }"
spec:
  enforcementAction: dryrun
  match:
    kinds:
      - apiGroups:
          - ""
        kinds:
          - Pod
    excludedNamespaces:
      - kube-system
      - gke-system
