resources/policy/bundles/pss-baseline-v2022/proc-mount-type.yaml
# Copyright 2024 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPProcMount
metadata:
  name: pss-baseline-v2022-proc-mount-type
  labels:
    policy.plural.sh/bundleName: pss-baseline-v2022
  annotations:
    policycontroller.gke.io/bundleVersion: "202403.0"
    policy.plural.sh/constraintData: |-
      "{
        bundleName: 'pss-baseline-v2022',
        bundleDisplayName: 'Pod Security Standards Baseline v2022',
        bundleLink: 'https://cloud.google.com/anthos-config-management/docs/how-to/using-pss-baseline',
        bundleVersion: '202403.0',
        bundleDescription: 'Use the Pod Security Standards Baseline v2022 policy bundle with Policy Controller to achieve many of the Kubernetes Pod Security Standards Baseline policy protections.',
        controlNumbers: '[]',
        severity: 'UNSPECIFIED',
        description: 'The default `/proc` masks reduce attack surface, and are required. https://kubernetes.io/docs/concepts/security/pod-security-standards/#baseline',
        remediation: 'Containers cannot run with a `procMount` set to a value other than `Default`. Remove `procMount` from your containers or set to `Default`.',
        minimumTemplateLibraryVersion: '1.10.2',
        constraintHash: '0f2eb71e04fe7cf09cc5fdf0768940d7156cfbd29d381864c52610ba098b0584'
      }"
spec:
  enforcementAction: dryrun
  match:
    kinds:
      - apiGroups:
          - ""
        kinds:
          - Pod
  parameters:
    procMount: Default
