resources/policy/bundles/pss-baseline-v2022/selinux.yaml
# Copyright 2024 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPSELinuxV2
metadata:
  name: pss-baseline-v2022-selinux
  labels:
    policy.plural.sh/bundleName: pss-baseline-v2022
  annotations:
    policycontroller.gke.io/bundleVersion: "202403.0"
    policy.plural.sh/constraintData: |-
      "{
        bundleName: 'pss-baseline-v2022',
        bundleDisplayName: 'Pod Security Standards Baseline v2022',
        bundleLink: 'https://cloud.google.com/anthos-config-management/docs/how-to/using-pss-baseline',
        bundleVersion: '202403.0',
        bundleDescription: 'Use the Pod Security Standards Baseline v2022 policy bundle with Policy Controller to achieve many of the Kubernetes Pod Security Standards Baseline policy protections.',
        controlNumbers: '[]',
        severity: 'UNSPECIFIED',
        description: 'Cannot set the SELinux type or set a custom SELinux user or role option.',
        remediation: 'Pods can use only the `seLinuxOptions` configurations listed in the `allowedSELinuxOptions` field. See "Pod Security Standards" for more information: https://kubernetes.io/docs/concepts/security/pod-security-standards/#baseline',
        minimumTemplateLibraryVersion: '1.10.1',
        constraintHash: 'a813d0a1c434ef5e0310abcfbd02a43a0125463e6e934c61eebaaa778c84de95'
      }"
spec:
  enforcementAction: dryrun
  match:
    kinds:
      - apiGroups:
          - ""
        kinds:
          - Pod
    excludedNamespaces:
      - kube-system
  parameters:
    allowedSELinuxOptions:
      - type: container_t
      - type: container_init_t
      - type: container_kvm_t
